[package]
name = "stacked_bar_chart"
version = "1.0.0"
edition = "2021"
authors = ["John Lyon-Smith <john@lyon-smith.org>"]
description = "Generate a stacked bar chart"
repository = "https://github.com/jlyonsmith/stacked_bar_chart"
readme = "README.md"
keywords = []
categories = []
license = "Unlicense"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
easy-error = "1.0.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
svg = "0.17.0"
yansi = "1.0.1"

[dev-dependencies]
criterion = "^0.5"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "stacked-bar-chart"
path = "src/bin/stacked_bar_chart.rs"
